--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <a href="https://github.com/muslumhanozturk" title="GitHub" class="fa fa-github" target="_blank" rel="noopener noreferrer"></a>
             <a href="https://instagram.com/m.hanozturk" title="instagram" class="fa fa-instagram" target="_blank" rel="noopener noreferrer"></a>
             <a href="https://linkedin.com/in/muslumhanozturk" title="Linkedin" class="fa fa-linkedin" target="_blank" rel="noopener noreferrer"></a>
-            <a href="https://hanozturk" title="" class="" target="_blank" rel="noopener noreferrer"></a>
+            <a href="#" class="mail-icon"><i class="fa fa-envelope"></i> <span class="mail-address">muslumhanozturk@gmail.com</span></a>
+            <a href="#" class="contact-icon"><i class="fa fa-phone"></i> <span class="contact-info">+90 (542) 510-6426</span></a>
         </div>
 
     </div>
