--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" light-mode="dark">
   <head>
-    <title>M. Han OZTURK | Home</title>
+    <title>M.Han OZTURK | Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -20,7 +20,7 @@
       property="og:site_name"
       content="https://portfolio.smaranjitghose.codes/"
     />
-    <meta property="og:title" content="John Doe | Home" />
+    <meta property="og:title" content="M.Han OZTURK | Home" />
     <meta
       property="og:description"
       content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world."
@@ -32,8 +32,8 @@
       name="twitter:site"
       content="https://portfolio.smaranjitghose.codes/"
     />
-    <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
+    <meta name="application-name" content="M.Han OZTURK | Home" />
+    <meta name="apple-mobile-web-app-title" content="M.Han OZTURK | Home" />
     <meta
       name="summary"
       content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world."
@@ -112,7 +112,7 @@
         Hi
         <span class="wave"
           ><img src="assets/images/Hand.gif" width="35px" /></span
-        >&nbsp;, I'm <span class="header">M. Han OZTURK</span>
+        >&nbsp;, I'm <span class="header">M.Han OZTURK</span>
         <div class="center">
           <div>
             <img
