--- a/research.html
+++ b/research.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" light-mode="dark">
   <head>
-    <title>John Doe | Research</title>
+    <title>M.Han OZTURK | Research</title>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -32,7 +32,7 @@
       property="og:site_name"
       content="https://portfolio.smaranjitghose.codes/research.html"
     />
-    <meta property="og:title" content="John Doe | Research" />
+    <meta property="og:title" content="M.Han OZTURK | Research" />
     <meta
       property="og:description"
       content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world."
@@ -48,8 +48,8 @@
       content="https://portfolio.smaranjitghose.codes/research.html"
     />
 
-    <meta name="application-name" content="John Doe | Research" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Research" />
+    <meta name="application-name" content="M.Han OZTURK | Research" />
+    <meta name="apple-mobile-web-app-title" content="M.Han OZTURK | Research" />
     <meta
       name="summary"
       content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world."
