--- a/education.html
+++ b/education.html
@@ -345,7 +345,7 @@
 
     <!-- Fourth -->
 
-    <div class="timeline-item">
+    <!-- <div class="timeline-item">
 
         <div class="timeline-img"></div>
   
@@ -353,10 +353,10 @@
           <div>
               <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
           </div>
-          <div class="date date2">2010 - 2012</div>
+          <!-- <div class="date date2">2010 - 2012</div>
           <div class="alignment">
               <h3 class="timelineHeading2">National Defense University</h3>
-              <h6>Associate's degree Communication Electronic Information Systems</h6>
+              <h6>Associate's degree Communication Electronic Information Systems</h6> -->
               <!-- <li>Top 1% in the department</li>
               <li>Best undergraduate Reseracher</li>
               <li>Betsy Schumacker Woman</li>
@@ -364,7 +364,7 @@
           </div>
         </div>
   
-      </div>
+      </div> -->
         </div>
       </section>
       
