--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             >
             <span
               class="animated-text"
-              data-words="DevOps Engineer, AWS Cloud Architect"
+              data-words="Linux System Engineer, DevOps Engineer, AWS Cloud Architect"
             ></span>
           </span>
           <div>
