--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="center">
           <div>
             <img
-              src="assets/images/photo.jpg"
+              src="assets/images/dalgic.JPEG"
               alt=""
               class="rounded-circle"
               height="200"
